tests/ui/inline-const/required-const.stderr
error[E0080]: evaluation panicked: explicit panic
  --> $DIR/required-const.rs:6:17
   |
LL |         const { panic!() }
   |                 ^^^^^^^^ evaluation of `foo::<i32>::{constant#0}` failed here

note: erroneous constant encountered
  --> $DIR/required-const.rs:6:9
   |
LL |         const { panic!() }
   |         ^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn foo::<i32>`
  --> $DIR/required-const.rs:11:5
   |
LL |     foo::<i32>();
   |     ^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
